--- a/src/management/roles/role-editor.html
+++ b/src/management/roles/role-editor.html
@@ -57,7 +57,7 @@
                 <input placeholder="Zoeken op naam" ng-model="permissionSearch">
               </div>
               <div class="col-md-1">
-                <i ng-show="!editor.loadedPermissions" class="fa fa-circle-o-notch fa-spin"></i>
+                <i ng-show="!editor.loadedRolePermissions" class="fa fa-circle-o-notch fa-spin"></i>
               </div>
             </div>
             <div class="row">
