III-1251 label list as originally designed

--- a/src/management/labels/labels-list.html
+++ b/src/management/labels/labels-list.html
@@ -23,7 +23,7 @@
         </p>
         <div class="query-search-result"
              ng-class="{'loading-search-result': llc.loading}"
-             ng-show="llc.searchResult.totalItems > 0 && llc.query.length >= llc.minQueryLength">
+             ng-show="llc.searchResult.totalItems > 0">
             <div class="table-responsive" >
                 <table class="table table-hover table-striped">
                     <thead>
