--- a/src/management/roles/role-creator.html
+++ b/src/management/roles/role-creator.html
@@ -30,10 +30,10 @@
                 <label class="control-label" for="label-name-field">Bewerkrecht</label>
                 <input id="label-name-field"
                        class="form-control"
-                       name="editPermission"
+                       name="constraint"
                        type="text"
                        ng-maxlength="255"
-                       ng-model="creator.role.editPermission"
+                       ng-model="creator.role.constraint"
                        ng-model-options="{debounce: 300}"
                        ng-disabled="creator.creating">
             </div>
