--- a/src/management/roles/roles-list.html
+++ b/src/management/roles/roles-list.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <h1>Rollen <small><a ui-sref="split.manageRolesCreate">toevoegen</a></small></h1>
+    <h1>Rollen <small><a ui-sref="split.manageRoles.create" ui-sref-opts="{reload:true}">toevoegen</a></small></h1>
 </div>
 
 <div class="row">
