III-1179: role edit link always reloads the resolve

--- a/src/management/roles/roles-list.html
+++ b/src/management/roles/roles-list.html
@@ -44,8 +44,8 @@
                                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Bewerken <span class="caret"></span></button>
                                 <ul class="dropdown-menu">
-                                    <li><a ui-sref="split.manageRoles.edit({id: role.uuid})">Bewerken</a></li>
-                                    <li><a href="#">Verwijderen</a></li>
+                                    <li><a ui-sref="split.manageRoles.edit({id: role.uuid})" ui-sref-opts="{reload:true}">Bewerken</a></li>
+                                    <!--<li><a href="#">Verwijderen</a></li>-->
                                 </ul>
                             </div>
                             </td>
