III-1173: add label to role

--- a/src/management/roles/role-editor.html
+++ b/src/management/roles/role-editor.html
@@ -71,7 +71,8 @@
             Leden
           </uib-tab>
           <uib-tab heading="Labels">
-            Labels
+            <udb-search-label role="editor.role"
+                              label-added="editor.addLabel(label)">
           </uib-tab>
         </uib-tabset>
       </div>
