--- a/src/entry/logging/failed-job.template.html
+++ b/src/entry/logging/failed-job.template.html
@@ -1,10 +1,9 @@
 <p>
-  <button type="button" class="close udb-hide-job-button" ng-click="hideJob(job)" aria-label="Close">
-    <span aria-hidden="true">×</span>
-  </button>
+  <a class="udb-hide-job-button" ng-click="hideJob(job)">
+    <i class="fa fa-trash-o" aria-hidden="true"></i>
+  </a>
   <ins>
     <span am-time-ago="::job.getLogDateByState()"></span>
   </ins>
   <span ng-bind="job.getDescription()"></span>
 </p>
-
