III-1173: move role-editor to role-form

--- a/src/management/roles/role-form.html
+++ b/src/management/roles/role-form.html
@@ -3,7 +3,7 @@
 </div>
 <h2>Role bewerken</h2>
 
-<div ng-show="!editor.role && !editor.loadingError">
+<div ng-show="!editor.loadedRole && !editor.loadingError">
     <i class="fa fa-circle-o-notch fa-spin"></i>
 </div>
 
