--- a/src/management/roles/role-form.html
+++ b/src/management/roles/role-form.html
@@ -16,16 +16,26 @@
                        class="form-control"
                        name="name"
                        type="text"
+                       ng-minlength="3"
                        ng-required="true"
                        ng-maxlength="255"
                        ng-model="editor.role.name"
                        ng-disabled="editor.saving">
                 <p class="help-block" ng-if="editor.form.name.$error.required">Een role naam is verplicht.</p>
                 <p class="help-block" ng-if="editor.form.name.$error.maxlength">Een role mag maximum 255 tekens bevatten.</p>
+                <p class="help-block" ng-if="editor.form.name.$error.minlength">Een role moet uit minstens 3 tekens bestaan.</p>
+
+                <button ng-disabled="!editor.form.$valid || editor.saving"
+                  ng-if="!editor.role['@id']"
+                  type="button"
+                  class="btn btn-primary"
+                  ng-click="editor.createRole()">
+                  Opslaan <i class="fa fa-circle-o-notch fa-spin" ng-show="editor.saving"></i>
+                </button>
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row" ng-show="editor.role['@id']">
         <div class="col-md-12">
             <div class="form-group" udb-form-group>
                 <label class="control-label" for="label-name-field">Bewerkrecht</label>
@@ -39,7 +49,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row" ng-show="editor.role['@id']">
       <div class="col-md-12">
         <uib-tabset>
           <uib-tab heading="Permissies">
@@ -116,7 +126,7 @@
         </uib-tabset>
       </div>
     </div>
-    <div class="row">
+    <div class="row" ng-if="editor.role['@id']">
       <div class="col-md-12">
         <button ng-disabled="!editor.form.$valid || editor.saving"
           type="button"
