--- a/src/management/roles/role-form.html
+++ b/src/management/roles/role-form.html
@@ -10,7 +10,12 @@
 <form name="editor.form" class="css-form" novalidate>
     <div class="row">
         <div class="col-md-6">
-            <div class="form-group" udb-form-group>
+            <div class="form-group" udb-form-group ng-if="!editor.editName && editor.role.name">
+              <label class="control-label">Naam</label>
+              <p><span ng-bind="editor.role.name"></span>
+              <a href ng-click="editor.editName = true">Wijzigen</a></p>
+            </div>
+            <div class="form-group" udb-form-group ng-if="editor.editName || !editor.role.name">
                 <label class="control-label" for="label-name-field">Naam</label>
                 <input id="label-name-field"
                        class="form-control"
@@ -33,11 +38,24 @@
               ng-click="editor.createRole()">
               Opslaan <i class="fa fa-circle-o-notch fa-spin" ng-show="editor.saving"></i>
             </button>
+
+            <button ng-disabled="!editor.form.$valid || editor.saving"
+              ng-if="editor.editName"
+              type="button"
+              class="btn btn-primary"
+              ng-click="editor.updateName()">
+              Opslaan <i class="fa fa-circle-o-notch fa-spin" ng-show="editor.saving"></i>
+            </button>
         </div>
     </div>
     <div class="row" ng-show="editor.role['@id']">
         <div class="col-md-12">
-            <div class="form-group" udb-form-group>
+            <div class="form-group" udb-form-group ng-if="!editor.editConstraint">
+              <label class="control-label">Bewerkrecht</label>
+              <p><span ng-bind="editor.role.constraint"></span>
+              <a href ng-click="editor.editConstraint = true">Wijzigen</a></p>
+            </div>
+            <div class="form-group" udb-form-group ng-if="editor.editConstraint">
                 <label class="control-label" for="label-name-field">Bewerkrecht</label>
                 <input id="label-name-field"
                        class="form-control"
@@ -50,7 +68,8 @@
             <button ng-disabled="!editor.form.$valid || editor.saving"
               type="button"
               class="btn btn-primary"
-              ng-click="editor.save()">
+              ng-if="editor.editConstraint"
+              ng-click="editor.updateConstraint()">
               Opslaan <i class="fa fa-circle-o-notch fa-spin" ng-show="editor.saving"></i>
             </button>
         </div>
