--- a/src/management/users/users-list.html
+++ b/src/management/users/users-list.html
@@ -11,21 +11,28 @@
     <div class="col-md-1">
         <i ng-show="ulc.loading" class="fa fa-circle-o-notch fa-spin"></i>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-2 text-right">
         <a class="btn btn-primary" ui-sref="split.manageUsers.create" ui-sref-opts="{reload:true}">
             <i class="fa fa-plus-circle"></i> Gebruiker toevoegen
         </a>
     </div>
 </div>
 
-<div class="row" ng-cloak>
+<div class="row search-result-block" ng-cloak>
     <div class="col-md-12">
-        <p ng-show="ulc.query.length < ulc.minQueryLength">
-            Schrijf een zoekopdracht van minstens 3 karakters in het veld hierboven om gebruikers te zoeken.
-        </p>
-        <p ng-show="ulc.query.length >= ulc.minQueryLength && ulc.searchResult.totalItems === 0">
-            Geen gebruikers gevonden.
-        </p>
+        <div class="alert alert-info" ng-show="ulc.query.length < ulc.minQueryLength" role="alert">
+            <p>Schrijf een zoekopdracht van minstens 3 karakters in het veld hierboven om gebruikers te zoeken.</p>
+            <p>Laat het veld leeg om de volledige lijst te tonen in de volgorde dat de gebruikers zijn aangemaakt.</p>
+        </div>
+        <div ng-show="ulc.query.length >= ulc.minQueryLength && ulc.searchResult.totalItems === 0"
+             class="alert alert-warning" role="alert">
+            <p>Geen gebruikers gevonden.</p>
+        </div>
+        <div ng-show="ulc.problem" class="alert alert-warning" role="alert">
+            <span>Er ging iets mis tijdens het zoeken:</span>
+            <br>
+            <strong ng-bind="ulc.problem.title"></strong>
+        </div>
         <div class="query-search-result users-results"
              ng-class="{'loading-search-result': ulc.loading}"
              ng-show="ulc.searchResult.totalItems > 0">
